# shadow

./: .gitignore  .shadowtrack  Cargo.toml  README.md  draft.md  test_meta.txt.shadow
.shadow/: config  config.toml  index.json
docs/: README.md  design.md  getting-started.md  public-assets.md
docs/archive/: design-v1.md
docs/backends/: volcengine-tos.md
src/: add.rs  config.rs  context.rs  hash.rs  init.rs  lib.rs  main.rs  media_type.rs  model.rs  object.rs  pull.rs  push.rs  remote.rs  repository.rs  stage.rs  status.rs  utils.rs
src/backend/: mod.rs  tos.rs
src/commands/: check.rs  gc.rs  init.rs  mod.rs  publish.rs  remove.rs  restore.rs  status.rs  verify.rs
