[package]
name = "shadow"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
dirs = "6.0.0"
glob = "0.3.3"
hex = "0.4.3"
ignore = "0.4.25"
rust-s3 = "0.37.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
