[package]
name = "shadow"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
clap = { version = "4.5.57", features = ["derive"] }
futures-core = "0.3.31"
ignore = "0.4.25"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
uuid = { version = "1.20.0", features = ["v4"] }
ve-tos-rust-sdk = { version = "2.9.19", default-features = false, features = ["asynchronous", "tokio-runtime", "use-rustls"] }

[dev-dependencies]
tempfile = "3.24.0"
