[package]
name = "shadow"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
dotenvy = "0.15.7"
futures-core = "0.3.32"
ignore = "0.4.28"
infer = "0.22.0"
mime = "0.3.17"
mime_guess = "2.0.5"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.3"
uuid = { version = "1.23.5", features = ["v4"] }
ve-tos-rust-sdk = { version = "2.9.19", default-features = false, features = ["asynchronous", "tokio-runtime", "use-rustls"] }

[dev-dependencies]
tempfile = "3.27.0"
